--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "cities.json": "^1.1.5",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "remove-accents": "^0.4.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
